# midgar-shmup

./: Cargo.toml  TODO.md
data/: blueprints.json
src/: app.rs  blueprints.rs  components.rs  input.rs  main.rs  renderer.rs  resources.rs  systems.rs  world.rs
src/components/: attacker.rs  bomber.rs  camera.rs  collider.rs  faction.rs  health.rs  mod.rs  pickup.rs  player.rs  position.rs  projectile.rs  renderable.rs  shooter.rs  transform.rs  velocity.rs
src/systems/: attack.rs  bomber.rs  camera.rs  collision.rs  despawn.rs  enemy_spawn.rs  mod.rs  motion.rs  physics.rs  pickup.rs  pickup_spawn.rs  player.rs  shooter.rs
